[metadata]
name = datatime
author = Francesco Spinnato

[options]
packages = datatime
install_requires =
    awkward
    numpy
    pandas
    tqdm
    requests
python_requires = >= 3.9
include_package_data = True

[options.package_data]
datatime =
    database.csv
    gdrive_database.csv
    py.typed

[options.extras_require]
test =
    black
    sphinx
    sphinx-rtd-theme
    mock
    pytest
    pytest-cov
    flake8
    tox
    mypy
    types-requests

[mypy]
plugins = numpy.typing.mypy_plugin

;[flake8]
;max-line-length = 127